Groovy Dice - Changelog
***********************

groovydice v1.3 - Sat Feb 2, 2008
---------------------------------

 + Test coverage report added to the website.
 + Improvements on test coverage.
 + Extension points added to allow the user easily change the default API.


groovydice v1.2.1 - Sun Jan 13, 2008
------------------------------------

 + Website fixes.
 + Modifier methods were renamed to improve readability.


groovydice v1.2 - Sun Jan 13, 2008
----------------------------------

 + Huge refactoring on NumberPatcher class.
 + We can now pass a dice roll as an argument to a 'dynamic dice'.
 + Lots of methods were renamed to improve the readability of the API.
 + Useless method for_each_die() was removed.
 + Useless method count_where() was removed.


groovydice v1.1 - Wed Jan 9, 2008
---------------------------------

 + Some internal API methods were renamed.
 + DiceRollingSpec.getAverage() renamed to DiceRollingSpec.getMean().
 + Added the method DiceRollingSpec.getMedian().
 + Added the method DiceRollingSpec.getMode().


groovydice v1.0 - Sat January 5, 2008
-------------------------------------
 
 + initial release.


--EOF