@@ -20,9 +20,9 @@
 
     <developers>
         <developer>
-            <name>Daniel Martins</name>
-            <email>daniel_martins@users.sourceforge.net</email>
-            <url>http://danielfmartins.com</url>
+            <name>Daniel F. Martins</name>
+            <email>daniel_martins at users . sourceforge . net</email>
+            <url>http://danielfmartins.com/</url>
             <roles>
                 <role>Lead developer</role>
             </roles>
