@@ -50,6 +50,10 @@ tt {
     width: 180px;
 }
 
+td a.externalLink {
+    margin-right: 18px;
+}
+
 table.bodyTable th, table.bodyTable td {
-    font-size: 0.8em;
+    font-size: 0.85em;
 }
