@@ -1,12 +1,15 @@
 Groovy Dice - Changelog
 ***********************
 
-groovydice v1.3 - Sat Feb 2, 2008
+groovydice v1.3 - Wed Feb 6, 2008
 ---------------------------------
 
+ + Website fixes.
  + Test coverage report added to the website.
  + Improvements on test coverage.
  + Extension points added to allow the user easily change the default API.
+ + Modifier methods were renamed to improve readability.
+ + Default API was removed from the core code and is now available as plug-ins.
 
 
 groovydice v1.2.1 - Sun Jan 13, 2008
